force-app/main/default/objects/Application__c/fields/AI_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Match_Score__c</fullName>
    <label>AI Match Score</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>