force-app/main/default/objects/Application__c/fields/Candidate_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Ranking__c</fullName>
    <label>Candidate Ranking</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>