force-app/main/default/objects/Application__c/fields/Current_Hiring_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Hiring_Stage__c</fullName>
    <label>Current Hiring Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>