force-app/main/default/objects/Application__c/fields/Recruiter_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Assigned__c</fullName>
    <label>Recruiter Assigned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>