force-app/main/default/objects/Application__c/fields/Screening_Status__c.field-meta.xml
<CustomField>
    <fullName>Screening_Status__c</fullName>
    <label>Screening Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>